# avtools-docker

./: .gitmodules  .woodpecker.yml  Dockerfile.assets  Dockerfile.utils-cpu  Dockerfile.utils-cpu-warm  Dockerfile.utils-gpu  Dockerfile.utils-gpu-warm  Makefile  README.md  pyproject.toml
docs/plans/: 2026-05-03-ffmpeg-onnx-submodule-integration.md  2026-05-03-siglip2-cli-bootstrap-implementation-plan.md  2026-05-03-utils-image-bootstrap-implementation-plan.md
requirements/: utils-cpu.txt  utils-gpu-constraints.txt
scripts/: siglip2_embed.py  smoke-cpu.sh  warm-models.sh
tests/: test_repo_layout.py  test_siglip2_embed.py
